--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,15 @@
 {
     "manifest_version": 2,
-    "name":    "BC Video Fix Firefox Plugin",
-    "version": "0.1",
+    "name":    "BC Video Fix for Firefox Plugin",
+    "version": "0.2",
 
 	"browser_action": {
-    "default_title": "BC Video Fix Firefox Plugin",
+    "default_title": "BC Video Fix for Firefox Plugin",
     "default_popup": "index.html"
 	},
 	"permissions": [
 		"activeTab",
+		"tabs",
 		"<all_urls>"
 	]
 }
